# TrackingCar

./: README.md
src/robot_line/: CMakeLists.txt  package.xml
src/robot_line/EDlib/: EDCircles.cpp  EDCircles.h  EDLines.h  color_recognition.hpp  depth.hpp  locate_elg.hpp
src/robot_line/config/: line.yaml
src/robot_line/include/: line_detect.h  pole.cpp  pole.h  ros_interface.h
src/robot_line/msg/: points.msg
src/robot_line/src/: line_detect.cpp  line_node.cpp  ros_interface.cpp
src/robot_recognition/: CMakeLists.txt  package.xml
src/robot_recognition/scripts/: character_recognition.py
src/robot_serial/: CMakeLists.txt  package.xml
src/robot_serial/include/: middleware.h  ros_interface.h
src/robot_serial/src/: middleware.cpp  ros_interface.cpp  serial_node.cpp
src/robot_test/: CMakeLists.txt  package.xml
src/robot_test/launch/: robot_track.launch
src/robot_test/src/: vel_control.cpp
